appId: ${MAESTRO_APP_ID}
---
- launchApp:
    clearState: true
- assertVisible: "Welcome Screen"
- tapOn: "Go to Login"
- assertVisible: "Login Screen"
- tapOn:
    id: "login-identity-input"
- inputText: "active-user@example.com"
- hideKeyboard
- tapOn: "Sign In"
- assertVisible: "Nearby Venues Screen"
